[project]
name = "xcnstock"
version = "0.1.0"
description = "A股专业交易系统 - 选股分析与打板策略"
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:Due to '_pack_'.*_RawValue.*:DeprecationWarning:py_mini_racer._dll",
    "ignore:Due to '_pack_'.*_ArrayBufferByte.*:DeprecationWarning:py_mini_racer._objects",
]

[tool.ruff]
line-length = 100
target-version = "py310"
